[package]
name = "arc-atomic-ref"
version = "0.1.0"
authors = ["BlueCat Networks <support@bluecatnetworks.com>"]
edition = "2021"
# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown)
description = """
arc-atomic-ref is a small library that wraps arc-swap in
Arc<T> so the atomic reference can be shared widely between many tasks/threads
"""
# These URLs point to more information about the repository
documentation = "https://docs.rs/arc-atomic-ref"
repository = "https://github.com/bluecatengineering/arc-atomic-ref"
# This points to a file in the repository (relative to this Cargo.toml). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"
# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["atomic-ref", "arcswap"]
categories = ["memory-management", "data-structures"]
# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from https://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT"

[dependencies]
arc-swap = "1.2.0"
